--- a/portoflio-project/src/app/app.component.html
+++ b/portoflio-project/src/app/app.component.html
@@ -1,15 +1,17 @@
-<app-header>
+<div class="all">
+  <app-header>
 
-</app-header>
+  </app-header>
 
-<app-card>
+  <app-card>
 
-</app-card>
+  </app-card>
 
-<app-skills>
-  
-</app-skills>
+  <app-skills>
+    
+  </app-skills>
 
-<app-footer>
+  <app-footer>
 
-</app-footer>
+  </app-footer>
+</div>
