--- a/portoflio-project/src/app/card/card.component.html
+++ b/portoflio-project/src/app/card/card.component.html
@@ -1,1 +1,25 @@
-<p>card works!</p>
+<div class="all">
+    <table>
+        <tr>
+            <td>
+                <img class="profilePicture" src="../../assets/photo.PNG"/>
+            </td>
+            
+            <td>
+                <h2>LEROY DUCARDONNOY Paul</h2>
+                <h3>
+                    <a href="pld.pro@hotmail.com">
+                        pld.pro@hotmail.com
+                    </a>
+                </h3>
+                <p>
+                    J’aime gérer des bases de données, classer et mettre en valeur les informations essentielles afin de répondre aux demandes des utilisateurs et faciliter le pilotage de leurs activités.
+                    <br/>
+                    <br/>
+                    J’affectionne également le fait de créer une application en partant d’un besoin, réfléchir à sa logique en employant divers procédés et langages, imaginer des algorithmes afin d’obtenir un résultat concret, interactif et intelligent.
+                </p>
+            </td>
+        
+        </tr>
+    </table>
+</div>
