--- a/portoflio-project/src/app/card/card.component.html
+++ b/portoflio-project/src/app/card/card.component.html
@@ -1,5 +1,5 @@
 <div class="all">
-    <table>
+    <table class="card">
         <tr>
             <td>
                 <img class="profilePicture" src="../../assets/photo.PNG"/>
@@ -8,7 +8,7 @@
             <td>
                 <h2>LEROY DUCARDONNOY Paul</h2>
                 <h3>
-                    <a href="pld.pro@hotmail.com">
+                    <a class="email" href="pld.pro@hotmail.com">
                         pld.pro@hotmail.com
                     </a>
                 </h3>
