--- a/portoflio-project/src/app/card/card.component.scss
+++ b/portoflio-project/src/app/card/card.component.scss
@@ -7,3 +7,14 @@
     max-width: 55%;
     border-radius: 2%;
 }
+
+.email{
+    color: rgb(188, 201, 229);
+}
+
+.card{
+    background-color: #3f444e;
+    border-radius: 20px;
+    padding:5%;
+    width: 80%;
+}   
