--- a/portoflio-project/src/app/header/header.component.html
+++ b/portoflio-project/src/app/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<div class="all">
+    <table>
+        <tr>
+            <td style="size: 20%;text-align: center;">
+                <img src="../../assets/icon.png" class="icon"/>
+            </td>
+            <td style="size: 80%;text-align: center">
+                <h1 class="title">Portfolio</h1>
+            </td>
+        </tr>
+    </table>
+    
+</div>
